新增测量数据，和相关画图

--- a/doc/实际测量/实际测量.md
+++ b/doc/实际测量/实际测量.md
@@ -3,3 +3,14 @@
 # Introduction
 
 随着网络技术的不断发展,现有网络体系越来越庞大且复杂,这使得理解各种网络行为变得困难,从而导致网络管理的难度增加,网络安全所面临的挑战也愈发凸显。正是由于这些原因,网络领域的研究者希望通过网络测量技术更好地理解网络行为,预测网络发展趋势。网络链路的可用带宽测量是网络性能测量的重要环节,对网络链路可用带宽的精确测量有助于我们更好地了解网络环境,而且可以在路由选择、网络拥塞控制和网络故障定位等场景提供有价值的信息,还可以督促互联网服务提供商提供有保障的服务。
+
+发包数量不变，变化发包间隔（实质是测量时间增大）
+随着测量时间增大，测量的更加准确。10分钟就可以，20分钟更好
+
+测量时间不变，发包数量变化
+测量时间充分下，发包数量可以比较小，3000比较适合
+
+发包数量增加，间隔不变
+
+
+测量时间和发包数量不变，前后测量差距比较
